--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ body {
 }
 
 .zero{
-  background-image: url(../img/ocean.jpg);
+  background-image: url(../img/hockey.jpg);
   background-size: cover;
   background-position: center;
   width: 45%;
@@ -43,7 +43,7 @@ body {
 }
 
 .dark{
-  background-image: url(../img/ocean2.svg);
+  background-image: url(../img/hockey.svg);
   -webkit-transition: all 1s ease-out;
    -moz-transition: all 1s ease-out;
    -o-transition: all 1s ease-out;
@@ -62,8 +62,9 @@ body {
   font-weight: 700;
     font-style: normal;
     font-size: 50px;
-    text-shadow: 1px 1px black;
+    text-shadow: -6px 3px black;
     letter-spacing: 4px;
+    
 }
 
 .zero h3{
@@ -76,7 +77,7 @@ body {
   letter-spacing: 2px;
   font-size: 25px;
   margin-bottom: 80px;
-  text-shadow: 1px 1px black;
+  text-shadow: -3px 2px black;
 }
 
 .one {
@@ -91,7 +92,7 @@ body {
 #second-pic{
   width: 70%;
   height: 65%;
-  background-image: url(../img/byron.jpg);
+  background-image: url(../img/flag.jpg);
   background-size: cover;
   background-position: center;
   -webkit-transition: all 1s ease-out;
@@ -129,7 +130,7 @@ body {
 }
 
 .two {
-  background-image: url(../img/landscape2.jpg);
+  background-image: url(../img/storm.jpg);
   background-position: center;
   background-size: 100vw auto;
   background-repeat: no-repeat;
@@ -191,6 +192,7 @@ body {
   height: 45px;
   width: 45px;
   margin-left: 15px;
+
 
 }
 
