--- a/css/main.css
+++ b/css/main.css
@@ -72,12 +72,12 @@ body {
   padding-top: 20px;
   color: white;
   font-family: paralucent, sans-serif;
-  font-weight: 200;
+  font-weight: 400;
   font-style: normal;
   letter-spacing: 2px;
   font-size: 25px;
   margin-bottom: 80px;
-  text-shadow: -3px 2px black;
+  text-shadow: -3px 3px black;
 }
 
 .one {
@@ -92,7 +92,7 @@ body {
 #second-pic{
   width: 70%;
   height: 65%;
-  background-image: url(../img/flag.jpg);
+  background-image: url(../img/flag.JPG);
   background-size: cover;
   background-position: center;
   -webkit-transition: all 1s ease-out;
@@ -130,7 +130,7 @@ body {
 }
 
 .two {
-  background-image: url(../img/storm.jpg);
+  background-image: url(../img/storm.JPG);
   background-position: center;
   background-size: 100vw auto;
   background-repeat: no-repeat;
