--- a/css/photo.css
+++ b/css/photo.css
@@ -25,13 +25,13 @@ body {
 	height: 90vh;
 	display: flex;
   	justify-content: center;
-  	background-color: #080808;
+  	background-color: black;
   	margin: 0;
 }
 
 .section{
 	width: 50%;
-	background-color: #080808;
+	background-color: black;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -107,7 +107,7 @@ h3{
 	display: flex;
 	align-items: center;
 	color: white;
-	background-color: #080808;
+	background-color: black;
 	margin: 0;
 	justify-content: center;
 }
@@ -137,7 +137,7 @@ h1{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: #080808;
+	background-color: black;
 	padding-top: 15%;
 }
 
